// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add previous/next index to row with groupHeader. 1`] = `
<div>
  <div>
    <span
      className="row-1"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      1
    </span>
    <div>
      0
    </div>
    <span
      className="row-3"
      style={
        Object {
          "bottom": 200,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      2
    </span>
    <span
      className="row-4"
      style={
        Object {
          "bottom": 300,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      3
    </span>
    <span
      className="row-5"
      style={
        Object {
          "bottom": 400,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      4
    </span>
    <span
      className="row-6"
      style={
        Object {
          "bottom": 500,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      5
    </span>
    <div>
      5
    </div>
    <span
      className="row-8"
      style={
        Object {
          "bottom": 700,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      6
    </span>
    <span
      className="row-9"
      style={
        Object {
          "bottom": 800,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      7
    </span>
    <div>
      10
    </div>
  </div>
</div>
`;

exports[`should re-render with append row. 1`] = `"<div class=\\"c-virtual-list-container\\" style=\\"height: 500px; width: 100vw; overflow-x: auto;\\"><div><span class=\\"row-1\\" style=\\"position: absolute; top: 0px; left: 0px; min-height: 100px;\\">1</span><span class=\\"row-2\\" style=\\"position: absolute; top: 100px; left: 0px; min-height: 100px;\\">2</span><span class=\\"row-3\\" style=\\"position: absolute; top: 200px; left: 0px; min-height: 100px;\\">3</span><span class=\\"row-4\\" style=\\"position: absolute; top: 300px; left: 0px; min-height: 100px;\\">999</span></div></div>"`;

exports[`should re-render with unshift row. 1`] = `"<div class=\\"c-virtual-list-container\\" style=\\"height: 500px; width: 100vw; overflow-x: auto;\\"><div><span class=\\"row-1\\" style=\\"position: absolute; top: 0px; left: 0px; min-height: 100px;\\">999</span><span class=\\"row-2\\" style=\\"position: absolute; top: 100px; left: 0px; min-height: 100px;\\">1</span><span class=\\"row-3\\" style=\\"position: absolute; top: 200px; left: 0px; min-height: 100px;\\">2</span><span class=\\"row-4\\" style=\\"position: absolute; top: 300px; left: 0px; min-height: 100px;\\">3</span></div></div>"`;

exports[`should render with 1 rows. 1`] = `
<div
  className="c-virtual-list-container"
  style={
    Object {
      "height": 300,
      "overflowX": "auto",
      "width": "100vw",
      "willChange": "transform",
    }
  }
>
  <div
    className="c-virtual-list"
    style={
      Object {
        "height": 10000000,
        "minHeight": "100%",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <span
      className="row-1"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      1
    </span>
  </div>
</div>
`;

exports[`should render with 30 rows. 1`] = `
<div
  style={
    Object {
      "height": 300,
      "overflowX": "auto",
      "width": "100vw",
      "willChange": "transform",
    }
  }
>
  <div
    style={
      Object {
        "height": 10000000,
        "minHeight": "100%",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <span
      className="row-1"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      1
    </span>
    <span
      className="row-2"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 100,
        }
      }
    >
      2
    </span>
    <span
      className="row-3"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 200,
        }
      }
    >
      3
    </span>
    <span
      className="row-4"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 300,
        }
      }
    >
      4
    </span>
    <span
      className="row-5"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 400,
        }
      }
    >
      5
    </span>
    <span
      className="row-6"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 500,
        }
      }
    >
      6
    </span>
  </div>
</div>
`;

exports[`should render with height as px 1`] = `
<div
  className="c-virtual-list-container"
  style={
    Object {
      "height": 400,
      "overflowX": "auto",
      "width": "100vw",
      "willChange": "transform",
    }
  }
>
  <div
    className="c-virtual-list"
    style={
      Object {
        "height": 10000000,
        "minHeight": "100%",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <span
      className="row-1"
      style={
        Object {
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      1
    </span>
  </div>
</div>
`;

exports[`should render with reversed 30 rows. 1`] = `
<div>
  <div>
    <span
      className="row-1"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      1
    </span>
    <span
      className="row-2"
      style={
        Object {
          "bottom": 100,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      2
    </span>
    <span
      className="row-3"
      style={
        Object {
          "bottom": 200,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      3
    </span>
    <span
      className="row-4"
      style={
        Object {
          "bottom": 300,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      4
    </span>
    <span
      className="row-5"
      style={
        Object {
          "bottom": 400,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      5
    </span>
    <span
      className="row-6"
      style={
        Object {
          "bottom": 500,
          "left": 0,
          "minHeight": 100,
          "position": "absolute",
        }
      }
    >
      6
    </span>
  </div>
</div>
`;
